MIA Instant Payments

--- a/languages/payment-gateway-wc-maib-mia-ro_RO.po
+++ b/languages/payment-gateway-wc-maib-mia-ro_RO.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: Payment Gateway for maib MIA for WooCommerce 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/payment-gateway-"
 "wc-maib-mia\n"
-"POT-Creation-Date: 2025-12-09 17:47+0200\n"
-"PO-Revision-Date: 2025-12-09 17:49+0200\n"
+"POT-Creation-Date: 2025-12-09 19:13+0200\n"
+"PO-Revision-Date: 2025-12-09 19:14+0200\n"
 "Last-Translator: Alexander Minza <alex@alexminza.com>\n"
 "Language-Team: \n"
 "Language: ro_RO\n"
@@ -19,11 +19,11 @@ msgstr ""
 #. Description of the plugin
 #: payment-gateway-wc-maib-mia.php
 msgid ""
-"Accept MIA payments directly on your store with the Payment Gateway for maib "
-"MIA for WooCommerce."
+"Accept MIA Instant Payments directly on your store with the Payment Gateway "
+"for maib MIA for WooCommerce."
 msgstr ""
-"Acceptă plăți MIA direct în magazin cu gateway-ul de plată maib MIA pentru "
-"WooCommerce."
+"Acceptă MIA plăți instant direct în magazin cu gateway-ul de plată maib MIA "
+"pentru WooCommerce."
 
 #: payment-gateway-wc-maib-mia.php:121
 msgid "Enable/Disable"
