--- a/languages/payment-gateway-wc-maib-mia.pot
+++ b/languages/payment-gateway-wc-maib-mia.pot
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Payment Gateway for maib MIA for WooCommerce 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/payment-gateway-wc-maib-mia\n"
-"POT-Creation-Date: 2025-12-09 17:47+0200\n"
+"POT-Creation-Date: 2025-12-09 19:13+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,7 +16,7 @@ msgstr ""
 
 #. Description of the plugin
 #: payment-gateway-wc-maib-mia.php
-msgid "Accept MIA payments directly on your store with the Payment Gateway for maib MIA for WooCommerce."
+msgid "Accept MIA Instant Payments directly on your store with the Payment Gateway for maib MIA for WooCommerce."
 msgstr ""
 
 #: payment-gateway-wc-maib-mia.php:121
