--- a/languages/payment-gateway-wc-maib-mia.pot
+++ b/languages/payment-gateway-wc-maib-mia.pot
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Payment Gateway for maib MIA for WooCommerce 1.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/payment-gateway-wc-maib-mia\n"
-"POT-Creation-Date: 2025-12-09 19:13+0200\n"
+"POT-Creation-Date: 2025-12-09 21:52+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -202,7 +202,7 @@ msgstr ""
 #. translators: 1: Order ID
 #: payment-gateway-wc-maib-mia.php:540
 #, php-format
-msgid "Callback order already fully paid: %1$d."
+msgid "Callback order #%1$s already fully paid."
 msgstr ""
 
 #. translators: 1: Order ID, 2: Payment method title, 3: Payment notification callback data
